--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,14 @@
   "author": "Abhishek",
   "license": "ISC",
   "dependencies": {
+    
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5",
-    "nodemon": "^3.0.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7"
   }
 }
